--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Map Project - Pacific Crest Trail</title>
+    <title>Where is Nathan? - A small mapping project for Nathan's PCT Adventure</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <style>
         body {
@@ -26,9 +26,9 @@
 
     <div class="content">
         <h1>Pacific Crest Trail Map</h1>
-        <p>This map displays the Pacific Crest Trail (PCT) using OpenStreetMap tiles. The trail stretches from Mexico to Canada.</p>
-        <img src="your_image1.jpg" alt="Image of the Pacific Crest Trail">
-        <img src="your_image2.jpg" alt="Another Image of the Trail">
+        <p>This is rough start to keep track of Nathan's hiking progress.</p>
+        <img src="nathan.png" alt="Image of the Pacific Crest Trail">
+        <img src="distance_yesterday.jpg" alt="Another Image of the Trail">
     </div>
  
 
